Styled AreaCharts and fixed its overlapping ticks

--- a/src/styles/_politician_page.scss
+++ b/src/styles/_politician_page.scss
@@ -45,7 +45,23 @@
             background: linear-gradient(-90deg, rgba($complementary, 0.3), transparent);
         }
     }
+    .chart_container { 
 
+        #stroke_main{
+            stroke:$secondary;
+        }
+        #degrade {
+            stop:nth-of-type(1){
+                stop-color: $secondary;
+            }
+            stop:nth-of-type(2){
+                stop-color: $primary;
+            }
+        }
+        .recharts-cartesian-axis-ticks text{
+         fill: rgba($secondary, 0.5);   
+        }
+    }
     .ta7lil_container{
         color: $secondary
     }
@@ -54,17 +70,11 @@
 
 .pp--dostouri{
     @include addPartyColors($red--dark, $red--light, $green--light);
-    .chart_container { 
-        #degrade--dostouri stop{
-            stop-color: $red--light;
-        }
-    }
+
 
 }
 
 .pp--karama{
     @include addPartyColors($green--light, $green--dark, $red--light);
-    .chart_container #degrade--karama stop{
-        stop-color: $green--dark;
-    }
+
 }
